--- a/package.json
+++ b/package.json
@@ -8,24 +8,26 @@
         "@headlessui/react": "^1.4.2",
         "@inertiajs/react": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
-        "@vitejs/plugin-react": "^3.0.0",
+        "@vitejs/plugin-react": "^4.3.4",
         "autoprefixer": "^10.4.12",
         "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.7.2",
+        "laravel-vite-plugin": "^1.2.0",
         "lodash": "^4.17.19",
         "postcss": "^8.4.18",
         "react": "^18.3.1",
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
-        "vite": "^4.0.0"
+        "vite": "^6.2.2"
     },
     "dependencies": {
         "@fortawesome/free-brands-svg-icons": "^6.7.2",
         "@fortawesome/free-solid-svg-icons": "^6.7.2",
         "@fortawesome/react-fontawesome": "^0.2.2",
+        "dompurify": "^3.2.4",
         "icons": "^1.0.0",
         "lucide-react": "^0.475.0",
-        "react-facebook-customer-chat": "^0.0.2",
-        "react-icons": "^5.5.0"
+        "quill": "^2.0.3",
+        "react-icons": "^5.5.0",
+        "react-quill": "^2.0.0"
     }
 }
